corpus/c/syntax/case-01/snapshots/gcc15/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:13: error: [syntax] syntax error
help: fix the first parser error at the user-owned location
want: ;
near: }} token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
  patch: src/main.c
  2 -     return 0
  2 +     return 0;

src/main.c:2:13: error: [syntax] syntax error
help: fix the first parser error at the user-owned location
want: ;
near: } token
| src/main.c:2:13
|     return 0
|             ^
raw:
  src/main.c:2:13: error: expected ';' before '}' token
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output